Endpoints created, model, config, update gradle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=jobarcelona
 
-spring.devtools.add-prperties=false
+spring.devtools.add-properties=false
 logging.level.web=debug
+#security.basic.enabled=false
+#debug=true;
+#trace=true;
