--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.ascii274'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '15'
 
 repositories {
 	mavenCentral()
@@ -14,9 +14,18 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.6.7'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.7'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.6.7'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.7'
+
 }
 
 tasks.named('test') {
